overflow fix and page title
Took 16 minutes

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -298,6 +298,7 @@ nav + .container {
 }
 
 .slogan {
+  overflow: hidden;
 
   svg {
     font-family: "League Gothic", sans-serif;
